--- a/design.css
+++ b/design.css
@@ -2,26 +2,23 @@
 	margin:0;
 	padding:0;
 }
-nav{
-	width:120%;
-    height:70px;
-    background-color:DarkTurquoise;
-}
+
 ul{
-    margin:0;
-    padding:0;
+	list-style-type: none;
+  	margin: 0;
+  	padding: 0;
+  	overflow: hidden;
+  	background-color:DarkTurquoise;
 }
-ul li {
-    list-style:none;
- 	text-align:center;
-    display:inline-block;
-    line-height:70px;
+li {
+	float:left;
 }
-ul li a{
-    text-decoration:none;
-    color:black;
-    padding:0px 130px;
-    text-align:center;
+li a{
+     	display: block;
+  	color: white;
+  	text-align: center;
+ 	padding: 14px 16px;
+  	text-decoration: none;
 }
 #bodyindex{
     background-image: url('good.jpg');
@@ -108,9 +105,37 @@ p::first-letter{
 a[href="https://commons.wikimedia.org/wiki/Category:Videos"]{							
 	color:rgb(0,255,0);
 }
-#flextwo{
-	padding:10px;
+.flex one two-700{
+	grid-auto-rows:minmax(150px,auto);
 }
 body {
-	padding: 20px;
+	padding:10px;
+	padding-top:40px;
+}
+.grid-container{
+	display:grid;
+	grid-template-columns:auto auto auto;
+  	background-color: #2196F3;
+  	padding: 10px;
+	width:100%;
+	flex-flow:wrap;
+}
+.grid-item {
+	background-color:lightcyan;
+  	border: 1px solid lightblue;
+  	padding: 10px;
+  	font-size: 20px;
+  	text-align: center;
+}
+.fourth{
+	max-width:100%;
+}
+
+.modal .overlay ~ * > *, .card > * {
+	width: 100%;
+}
+nav{
+	background-color:DarkTurquoise;
+	margin:10px;
+	margin-top:0px;
 }
